--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,13 +33,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SPB</a>
+          <a class="navbar-brand" href="#">Swindon Property Buyers</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#about">2</a></li>
-            <li><a href="#contact">3</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">How We Work</a></li>
+            <li><a href="#contact">Why Use Us</a></li>
+            <li><a href="#contact">Saving You Money</a></li>
+            <li><a href="#contact">About Us</a></li>
+            <li><a href="#contact">FAQs</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
