--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="stylesheets/styles.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -31,7 +32,10 @@
       <!-- The justified navigation menu is meant for single line per list item.
            Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
-        <h3 class="text-muted">Swindon Property Buyers</h3>
+          <div style="display: flex; width: 100%;justify-content: space-between;">
+            <h3 class="text-muted">Swindon Property Buyers</h3>
+            <h3><i class="fa fa-facebook-official" aria-hidden="true"></i></h3>
+          </div>
         <nav>
           <ul class="nav nav-justified">
             <li class="active"><a href="#">Home</a></li>
@@ -46,9 +50,11 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Helping You!</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+          <h1>DO YOU NEED A <strong>QUICK</strong> SALE?</h1>
+        <p class="lead">
+            <h2>Swindon Property Buyers are here for you</h2>
+<!--            <h4>We can buy your property directly or we have non-sale options that are tailored to your personal circumstances</h4>-->
+        <h2><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></h2>
       </div>
 
       <!-- Example row of columns -->
@@ -69,6 +75,18 @@
           <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
+        
+        <div class="row">
+            <div class="col-md-8">
+                <h1>ABOUT US</h1>
+                <p>
+                    A small, family-run company based in the Swindon area which helps you solve your property problems. We have unrivaled experience and knowledge, and our real business is in helping real people – or knowing someone who can!</p>
+                    <p>
+                     Above all we are a quick-sale solution provider for Swindon and surrounding district. Swindon Property Buyers and our investors have funds available to buy your property as fast as possible, so get in touch by telephone or via the form here and we will talk through your options. 
+                </p>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
 
       <!-- Site footer -->
       <footer class="footer">
